# starlabrys.com

./: .gitignore  README.md  TASK-SPEC-nextjs-website.md  Taskfile.yml  index.html  package-lock.json  package.json  start-all.sh  start.bat  start.sh
advisor/: README.md  pyproject.toml
advisor/app/: __init__.py  agent.py  chat.py  config.py  intent.py  kb.py  main.py  models.py  rate_limit.py  session_store.py  tools.py
advisor/data/: kb.en.json  kb.zh.json
advisor/scripts/: regress_phase0.py
content/en/: about.md  home.md  services.md  team.md
content/en/work/: ai-log-analysis.md  device-config-rollout.md  firewall-automation.md  python-microservices.md
content/zh/: about.md  home.md  services.md  team.md
content/zh/work/: ai-log-analysis.md  device-config-rollout.md  firewall-automation.md  python-microservices.md
css/: styles.css
docs/: DEPLOYMENT-handoff.md
js/: i18n.js  main.js
public/: index.html
scripts/: build-advisor-kb.mjs  prod-all.mjs  prod-server.mjs
src/app/: globals.css
src/app/[locale]/: layout.tsx  page.tsx
src/app/[locale]/(legacy)/: layout.tsx
src/app/[locale]/about/: page.tsx
src/app/[locale]/contact/: page.tsx
src/app/[locale]/services/: page.tsx
src/app/[locale]/team/: page.tsx
src/components/: analytics.tsx  footer.tsx  language-switch.tsx  nav.tsx
src/components/home/: contact-cta.tsx  hero.tsx  insights.tsx  outcomes.tsx  reveal.tsx  scale.tsx  services.tsx  site-advisor.tsx  site-footer.tsx  site-header.tsx  ui.ts  work.tsx
src/lib/: content.ts  home-content.ts  i18n.ts  work-content.ts
(+1 files in other folders)
