[project]
name = "starlabrys-advisor"
version = "0.1.0"
description = "Starlabrys site advisor API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.0",
]

[tool.uv]
package = false
